Fix proficiency configuration cogs in dark mode.

--- a/less/v2/dark/character.less
+++ b/less/v2/dark/character.less
@@ -45,6 +45,8 @@
         &::before { opacity: unset; }
       }
     }
+
+    .pills-group.empty > h3 > a { color: var(--color-text-light-0); }
   }
 
   .tab.biography textarea { color: var(--dnd5e-color-blue-white); }
